2014-04-08  Xavi Artigas  <xartigas@fluendo.com>

	* src/fluttml.c:
	* src/gstttmlattribute.c:
	* src/gstttmlparse.c: (gst_event_new_new_segment),
	(gst_event_parse_new_segment), (gst_segment_set_newsegment),
	(gst_ttmlparse_gen_buffer), (gst_ttmlparse_handle_buffer),
	(gst_ttmlparse_handle_event), (gst_ttmlparse_chain),
	(gst_ttmlparse_sink_event), (gst_ttmlparse_class_init),
	(gst_ttmlparse_init):
	* src/gstttmltype.c: (gst_ttmltype_init):
	* src/gstttmlutils.c: (gst_ttml_utils_memdump_buffer):
	* src/gstttmlutils.h:
	* testsuite/ttml-play-1.0.bat:
	Port to GStreamer 1.0 API.

2014-04-04  Xavi Artigas  <xartigas@fluendo.com>

	* configure.ac:
	* src/Makefile.am:
	A bit of preparation for porting to 1.0 on Linux.

2014-04-03  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.h:
	Add libxml2 header required for gst-1.0 (was already included by
	GStreamer in 0.10).

2014-04-03  Xavi Artigas  <xartigas@fluendo.com>

	* win32/vs10/libgstfluttml_sdk.vcxproj:
	Add build dependency with libxml2 for gst-1.0

2014-04-03  Xavi Artigas  <xartigas@fluendo.com>

	* src/fluttml.c:
	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer),
	(gst_ttmlparse_change_state), (gst_ttmlparse_init):
	* src/gstttmlparse.h:
	Add support for building the plugin in DEMO mode.
	CAUTION: Since subtitle streams are SPARSE, the accumulated duration
	of all subtitles has no direct relationship with the total clip
	duration (in case the ttml is embedded in a container).

2014-04-01  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.10 ===

2014-01-28  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.9 ===

2014-01-24  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_time_expression),
	(gst_ttml_attribute_parse):
	Fix memory corruption caused by setlocale. The pointer it returns
	is not valid forever so its contents must be cached.